<resources>
    <string name="app_name">吱吱</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_zhizhi_text">吱吱</string>
    <string name="main_tab_record_text">记录</string>
    <string name="main_tab_message_text">消息</string>
    <string name="main_tab_me_text">我</string>
    <string name="record_makeup_text">化妆品</string>
    <string name="record_food_text">食品</string>
    <string name="record_medicine_text">药品</string>
    <string name="record_others_text">其他</string>
    <string name="record_overdue_text">已过期</string>
    <string name="record_add_product_text">添加宝贝</string>
    <string name="record_choose_classify_text">选择分类</string>
    <string name="add_product_name_hint">宝贝名</string>
    <string name="add_product_pr_hint">生产(使用)日期</string>
    <string name="add_product_ex_hint">过期(停用)日期</string>
    <string name="add_product_shelf_life_hint">保质期(使用时限)</string>
    <string name="add_product_quantity_hint">数量</string>
    <string name="add_product_position_hint">位置</string>
    <string name="add_product_advance_hint">提前提醒(天)</string>
    <string name="add_product_frequency_hint">提醒频率(次)</string>
    <string name="add_product_classify_hint">类型</string>
    <string name="add_product_classify_backup">备注</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="add_product_save_text">保存</string>
    <string name="add_product_save_success_text">保存成功</string>
    <string name="add_product_edit_text">编辑</string>
    <string name="add_product_del_text">删除</string>
    <string name="cancel_text">返回</string>
    <string name="product_add_success">添加成功~</string>
    <string name="title_activity_record_item_detail">RecordItemDetail</string>
    <string name="record_recent_hint_text">最近质保期提醒 &lt;font color="#FF4040"&gt; %1$d&lt;/font&gt;天</string>
    <string name="record_recent_hint_no_day_text">还没有宝贝哦</string>
    <string name="zhizhi_top_day_hint_text">距离质质提醒还有</string>
    <string name="zhizhi_top_day_hint_no_product">亲爱的，你还木有添加需要质质提醒的宝贝哦！</string>
    <string name="add_product_choose_image_text">选择图片</string>
    <string name="no_net_hint">没有找到网络，请联网后重试</string>


    <string name="msg_default_format">格式</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="result_product">找到产品</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>


    <string-array name="add_product_pr_spinner">
        <item>生产日期</item>
        <item>开始日期</item>
    </string-array>

    <string-array name="add_product_ex_spinner">
        <item>保质期</item>
        <item>结束日期</item>
    </string-array>

    <string-array name="message_group_text">
        <item>吱吱</item>
        <item>小贴士</item>
        <item>我的任务</item>
    </string-array>

    <string-array name="me_group_text">
        <item>我的记录</item>
        <item>我的收藏</item>
        <item>我的金币</item>
        <item>设置</item>
    </string-array>
    
    <string-array name="image_choose_text">
        <item>拍照</item>
        <item>从相册选择</item>
        <item>条形码扫描</item>
    </string-array>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_user_name_hint_text">邮箱/手机号</string>
    <string name="login_password_hint_text">请输入密码</string>
    <string name="login_user_name_text">用户名</string>
    <string name="login_password_text">密  码</string>
    <string name="login_text">登录</string>
    <string name="exit_login_text">退出登录</string>
    <string name="login_register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="logout_success">登出成功</string>
    <string name="register_success">注册成功</string>
    <string name="net_time_out">网络连接超时，请重试</string>
    <string name="server_error">服务器异常，请重试</string>
    <string name="user_name_exist">该用户名已存在</string>
    <string name="user_no_exist">该用户不存在</string>
    <string name="me_default_user_name_text">用户名</string>


    <string name="add_product_name_no_null">名字不能为空</string>
    <string name="add_product_pr_no_null">生产日期不能为空</string>
    <string name="add_product_shelf_life_no_null">保质期不能为空</string>
    <string name="zhizhi_refresh">刷新</string>

</resources>
