<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_tab"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:id="@+id/tab_zhizhi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/tab_iv_zhizhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tab_icon_zhizhi_normal"
                />
            <TextView
                android:id="@+id/tab_tv_zhizhi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_zhizhi_text"
                android:textSize="@dimen/main_tab_text_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_record"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"

            >
            <ImageView
                android:id="@+id/tab_iv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tab_icon_record_normal"
                />
            <TextView
                android:id="@+id/tab_tv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_record_text"
                android:textSize="@dimen/main_tab_text_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/tab_iv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tab_icon_message_normal"
                />
            <TextView
                android:id="@+id/tab_tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_message_text"
                android:textSize="@dimen/main_tab_text_size"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"

            >
            <ImageView
                android:id="@+id/tab_iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/tab_icon_me_normal"
                />
            <TextView
                android:id="@+id/tab_tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_me_text"
                android:textSize="@dimen/main_tab_text_size"
                />

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_above="@id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>
